# TinySwiftApp

./: AdapsLib_4_rk3588_swift_demo_test.rar  CMakeLists.txt  FrameProcessThread.cpp  FrameProcessThread.h  Makefile  QSTcamera.pro  README.md  README_zh_CN.md  SpadisQT.pro  SpadisQT_console.pro  SpadisQT_release.sh  adaps_dtof.cpp  adaps_dtof.h  adaps_dtof_uapi.h  adaps_sender.h  adaps_types.h  adapsdepthsettings.xml  ads6401_roi_sram_test_data.h  changLog.txt  common.h  depthmapwrapper.h  dtof_main.cpp  dtof_main.h  globalapplication.cpp  globalapplication.h  host_comm.cpp  host_comm.h  host_device_comm_types.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  majorimageprocessingthread.cpp  majorimageprocessingthread.h  misc_device.cpp  misc_device.h  rk-camera-module.h  rk-camera-module.h_rk3588  utils.cpp  utils.h  (+2 more)
